Ensure bottom padding on Safari and Chrome

--- a/src/genomes/uploads/styles.css
+++ b/src/genomes/uploads/styles.css
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   align-content: flex-start;
   justify-content: space-between;
+  min-height: 540px;
 }
 
 .wgsa-upload-instuctions > div {
